--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ sudo: false
 env:
   - TZ=Europe/Berlin
 
-install:
-  - git config remote.origin.fetch +refs/heads/*:refs/remotes/origin/*
-  - git fetch --unshallow --tags
+git:
+  depth: false
 
 android:
   components:
